Añade nuevos objetivos sobre osciloscopio

--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -46,6 +46,11 @@ El divisor de voltaje permite obtener una fracción del voltaje de entrada usand
   \item Determinar la resistencia equivalente en un circuito serie.
   \item Comparar los valores te\'oricos, simulados e implementados de los voltajes y corriente en un circuito serial resistivo.
   \item Determinar la potencia disipada por cada resistor en un circuito serial.
+  \item Identificar las partes principales del osciloscopio y comprender su funci\'on.
+  \item Configurar adecuadamente los controles del osciloscopio para visualizar se\~nales.
+  \item Medir caracter\'isticas de se\~nales el\'ectricas como amplitud, frecuencia, per\'iodo, fase y forma de onda utilizando el osciloscopio.
+  \item Interpretar correctamente las formas de onda observadas.
+  \item Familiarizarse con el funcionamiento de un generador de se\~nales.
 \end{itemize}
 
 % (Se omite la sección de materiales y equipos según indicación.)
