--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -185,37 +185,51 @@ Finalmente, se capturaron las pantallas del osciloscopio para cada configuració
 
 
 \subsection{Metodología IV: montaje carga y descarga del condensador}
-Se configuró un circuito RC serie siguiendo las especificaciones indicadas en la guía experimental, conectando la salida del generador de señales al nodo de entrada (punto~A) y ubicando el condensador en derivación respecto a tierra (punto~B). La Figura~\ref{fig:montaje-rc} queda reservada para ilustrar el montaje realizado durante la práctica.%
+Siguiendo la guía ``\textit{Osciloscopio}'', se armó el circuito RC propuesto en la Figura~7 del documento original, conectando la resistencia en serie con el condensador y tomando como puntos de prueba los nodos~A (salida del generador) y~B (terminal del condensador a medir). El esquema físico del montaje se documentará en la Figura~\ref{fig:montaje-rc}.
 \begin{figure}[H]
     \centering
     \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
-    \caption{Montaje del circuito RC para el estudio de carga y descarga.}
+    \caption{Montaje experimental del circuito RC.}
     \label{fig:montaje-rc}
-\end{figure}%
-Para la caracterización experimental se ajustó el generador a una señal cuadrada de \SI{100}{\hertz} y \SI{5}{\volt} pico a pico, verificando en el osciloscopio tanto la excitación aplicada como la respuesta del condensador. Primero se obtuvo la forma de onda en el punto~A, sobre la resistencia, registrando la señal cuadrada entregada por el generador (Figura~\ref{fig:rc-senal-entrada}). Posteriormente se trasladó la sonda al punto~B para observar la curva de carga y descarga del condensador (Figura~\ref{fig:rc-senal-condensador}).%
+\end{figure}
+
+Una vez ensamblado el circuito, se desarrolló el procedimiento experimental descrito en la guía:
+\begin{enumerate}
+    \item Ajustar el generador de señales a una onda cuadrada de \SI{100}{\hertz} con \SI{5}{\volt} pico a pico y offset nulo.
+    \item Conectar la sonda del osciloscopio al punto~A (sobre la resistencia) para registrar la señal de excitación entregada por el generador.
+    \item Capturar la forma de onda observada en el punto~A y reservarla en la Figura~\ref{fig:rc-senal-entrada}.
+    \item Trasladar la sonda del osciloscopio al punto~B (sobre el condensador) y visualizar la curva de carga y descarga.
+    \item Capturar la respuesta temporal en el punto~B y reservarla en la Figura~\ref{fig:rc-senal-condensador}.
+\end{enumerate}
 \begin{figure}[H]
     \centering
     \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
-    \caption{Captura de la señal cuadrada medida en el punto~A del circuito RC.}
+    \caption{Señal cuadrada medida experimentalmente en el punto~A.}
     \label{fig:rc-senal-entrada}
-\end{figure}%
+\end{figure}
 \begin{figure}[H]
     \centering
     \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
-    \caption{Captura de la tensión en el condensador (punto~B).}
+    \caption{Curva de carga y descarga observada en el condensador (punto~B).}
     \label{fig:rc-senal-condensador}
-\end{figure}%
-De forma complementaria se replicó el montaje en el simulador, manteniendo los mismos valores de excitación y componentes. Se tomaron capturas de las formas de onda en los puntos~A y~B, mostradas en las Figuras~\ref{fig:rc-simulacion-entrada} y~\ref{fig:rc-simulacion-condensador}, con el objetivo de contrastar el comportamiento teórico con las mediciones experimentales.%
+\end{figure}
+
+Posteriormente se replicó el procedimiento en un simulador de circuitos, manteniendo los mismos parámetros eléctricos y nodos de medición para comparar los resultados.
+\begin{enumerate}
+    \item Configurar la misma señal de entrada (onda cuadrada de \SI{100}{\hertz} y \SI{5}{\volt} pico a pico) en el modelo virtual.
+    \item Medir en el punto~A del circuito simulado y almacenar la traza correspondiente en la Figura~\ref{fig:rc-simulacion-entrada}.
+    \item Medir en el punto~B del circuito simulado y registrar la evolución temporal en la Figura~\ref{fig:rc-simulacion-condensador}.
+\end{enumerate}
 \begin{figure}[H]
     \centering
     \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
-    \caption{Simulación de la señal cuadrada aplicada al circuito RC (punto~A).}
+    \caption{Respuesta simulada en el punto~A del circuito RC.}
     \label{fig:rc-simulacion-entrada}
-\end{figure}%
+\end{figure}
 \begin{figure}[H]
     \centering
     \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
-    \caption{Simulación de la respuesta del condensador en el punto~B.}
+    \caption{Respuesta simulada del condensador en el punto~B.}
     \label{fig:rc-simulacion-condensador}
 \end{figure}
 
