Ajusta referencias a imágenes en el informe

--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -137,11 +137,11 @@ Se conectó el generador de señales directamente al canal~1 del osciloscopio, t
 \begin{figure}[H]
     \centering
     \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
-    \caption{Espacio para la fotografía del montaje empleado en la medición de frecuencia.}
+    \caption{Montaje empleado en la medición de frecuencia.}
     \label{fig:montaje-frecuencia}
 \end{figure}
 
-Con la ayuda del generador se configuraron las señales enlistadas en la Tabla~\ref{tab:frecuencia}, registrando en el osciloscopio tanto la base de tiempo seleccionada (tiempo/división) como el período resultante. Cada forma de onda se documentó mediante capturas de pantalla, destinadas a ser incorporadas en las Figuras~\ref{fig:frecuencia-senoidal-100hz}--\ref{fig:frecuencia-rampa-1k5hz}. Estas evidencias permiten comparar la respuesta del equipo frente a cambios en la frecuencia y el tipo de señal.%
+Con la ayuda del generador se configuraron las señales enlistadas en la Tabla~\ref{tab:frecuencia}, registrando en el osciloscopio tanto la base de tiempo seleccionada (tiempo/división) como el período resultante. Las formas de onda obtenidas se muestran en las Figuras~\ref{fig:frecuencia-senoidal-100hz}--\ref{fig:frecuencia-rampa-1k5hz}, lo que permite comparar la respuesta del equipo frente a cambios en la frecuencia y el tipo de señal.%
 \begin{table}[H]
     \centering
     \caption{Registro de las señales obtenidas con el generador.}
@@ -155,7 +155,6 @@ Con la ayuda del generador se configuraron las señales enlistadas en la Tabla~\
         Rampa & \SI{1.5}{\kilo\hertz} & \SI{1}{\milli\second} & \SI{665}{\micro\second} \\ \hline
     \end{tabular}
 \end{table}%
-Finalmente, se capturaron las pantallas del osciloscopio para cada configuración. A continuación se dejan los espacios correspondientes para incorporar las imágenes obtenidas durante la práctica.%
 \begin{figure}[H]
     \centering
     \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
@@ -184,8 +183,15 @@ Finalmente, se capturaron las pantallas del osciloscopio para cada configuració
     \label{fig:frecuencia-rampa-1k5hz}
 \end{figure}
 
+\subsection{Metodología IV: montaje de carga y descarga del condensador}
+Se armó el circuito RC serie indicado en la guía práctica sobre un protoboard, conectando en serie la resistencia de \SI{1}{\kilo\ohm} con el condensador proporcionado en el laboratorio. El generador de funciones se acopló al nodo de entrada del circuito y se condujo el retorno a tierra común, mientras que las puntas del osciloscopio quedaron listas para registrar la señal aplicada y la respuesta del condensador. Como se aprecia en la Figura~\ref{fig:montaje-rc}, el montaje mantiene una conexión compacta entre la resistencia, el condensador y las terminales de medición.
 
-
+\begin{figure}[H]
+    \centering
+    \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
+    \caption{Montaje físico del circuito RC para el estudio de carga y descarga.}
+    \label{fig:montaje-rc}
+\end{figure}
 
 \section{Resultados}
 \subsection{Figura de ejemplo}
